--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,95 @@
-body {
-    background-color: aquamarine;
+*{
+    padding: 0px;
+    margin: 0px;
 }
+body {
+    
+}
+header{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 30px;
+    text-align: center;
+    height: 90px;
+    color: white;
+    background-color: #e65100;
+}
+
+.subtit{
+    text-align: center;
+    font-size: 35px;
+    margin-top: 80px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+}
+.lista{
+    margin-left: 835px;
+    margin-top: 100px;
+    font-size: 30px;
+}
+img{
+    margin-left: -120px;
+    width: 500px;
+    border-radius: 30px;
+    margin-top: 10px;
+}
+a{
+    
+    color: inherit;
+}
+#inicial{
+    width: 110%; /* A imagem ocupa 100% da largura do elemento pai */
+    height: auto; /* A altura será ajustada proporcionalmente */
+    display: block; /* Remove qualquer espaço extra abaixo da imagem */
+    
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #e65100;
+    color: white;
+  }
+  
+  header .logo h1 {
+    font-size: 36px;
+  }
+  
+  .search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  form {
+    display: flex;
+    align-items: center;
+  }
+  
+  input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 250px;
+    margin-right: 10px;
+  }
+  
+  button {
+    padding: 10px 15px;
+    background-color: #ff8c00;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  button:hover {
+    background-color: #ff7a00;
+  }
+  
+  main {
+    padding: 20px;
+  }
