--- a/public/bolodefuba.css
+++ b/public/bolodefuba.css
@@ -1,9 +1,8 @@
-* {
+*{
     margin: 0;
-    box-sizing: border-box;
-  }
-  
-  header{
+}
+
+header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 70px;
     text-align: center;
@@ -36,15 +35,14 @@ h1{
 }
 .subtit{
     font-size: 35px;
-    margin-top: -362px;
+    margin-top: -360px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #e65100;
     font-weight: bolder;
-    
 }
 .subtit2{
     font-size: 35px;
-    margin-top: -290px;
+    margin-top: -360px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #e65100;
     font-weight: bolder;
@@ -52,9 +50,8 @@ h1{
 li{
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
 }
-.favorite-btn {
+.favorite{
     background-color: #ffcc00;
     border: none;
     padding: 10px 20px;
@@ -66,11 +63,11 @@ li{
     margin-left:1740px;
     margin-top: -30px;
 }
-.favorite-btn:hover {
+.favorite{
     background-color: #ff9900;
 }
 
-.favorite-btn:focus {
+.favorite{
     outline: none;
 }
 .logo{
