--- a/public/bolocenoura.css
+++ b/public/bolocenoura.css
@@ -53,3 +53,28 @@ li{
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.favorite-btn {
+    background-color: #ffcc00;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    display: block ;
+    text-align: right;
+    margin-left:1740px;
+    margin-top: -30px;
+}
+.favorite-btn:hover {
+    background-color: #ff9900;
+}
+
+.favorite-btn:focus {
+    outline: none;
+}
+.logo{
+    font-size: 36px;
+    text-align: start;
+    padding-top: 40px;
+    padding-left: 20px;
+}
