--- a/public/bolodefuba.css
+++ b/public/bolodefuba.css
@@ -51,7 +51,7 @@ li{
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.favorite{
+.favorite-btn{
     background-color: #ffcc00;
     border: none;
     padding: 10px 20px;
@@ -63,11 +63,11 @@ li{
     margin-left:1740px;
     margin-top: -30px;
 }
-.favorite{
+.favorite-btn{
     background-color: #ff9900;
 }
 
-.favorite{
+.favorite-btn{
     outline: none;
 }
 .logo{
