--- a/public/acaraje.css
+++ b/public/acaraje.css
@@ -18,20 +18,20 @@ h1{
 }
 
 .linha-vertical {
-    width: 4px; /* Espessura da linha */
-    height: 170vh; /* Altura da linha (100% da altura da tela) */
-    background-color: #000; /* Cor da linha */
-    margin-left: -70px; /* Alinhar a linha ao centro */
+    width: 4px; 
+    height: 170vh; 
+    background-color: #000; 
+    margin-left: -70px; 
     margin-top: 860px;
 }
 .container {
     display: flex;
-    justify-content: space-between; /* Espaçar os dois lados do conteúdo */
-    align-items: center; /* Alinhar os itens ao centro verticalmente */
-    height: 100vh; /* Preencher toda a altura da tela */
+    justify-content: space-between; 
+    align-items: center; 
+    height: 100vh; 
 }
 .conteudo {
-    flex: 1; /* Cada lado ocupa metade da tela */
+    flex: 1; 
     padding: 30px;
 }
 .subtit{
@@ -52,11 +52,6 @@ li{
     font-size: 30px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.li2{
-    font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
-}
 .favorite-btn {
     background-color: #ffcc00;
     border: none;
@@ -66,19 +61,19 @@ li{
     border-radius: 5px;
     display: block ;
     text-align: right;
-    margin-left:1740px;
+    margin-left:1720px;
     margin-top: -30px;
-}
-.favorite-btn:hover {
+  }
+  .favorite-btn:hover {
     background-color: #ff9900;
-}
-
-.favorite-btn:focus {
+  }
+  
+  .favorite-btn:focus {
     outline: none;
-}
-.logo{
+  }
+  .logo{
     font-size: 36px;
     text-align: start;
     padding-top: 40px;
     padding-left: 20px;
-}
+  }
