--- a/public/panqueca.css
+++ b/public/panqueca.css
@@ -1,3 +1,6 @@
+*{
+    margin: 0;
+}
 header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 70px;
@@ -31,14 +34,14 @@ h1{
 }
 .subtit{
     font-size: 35px;
-    margin-top: -340px;
+    margin-top: -365px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #e65100;
     font-weight: bolder;
 }
 .subtit2{
     font-size: 35px;
-    margin-top: -240px;
+    margin-top: -340px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #e65100;
     font-weight: bolder;
