--- a/public/style.css
+++ b/public/style.css
@@ -2,9 +2,7 @@
     padding: 0px;
     margin: 0px;
 }
-body {
-    
-}
+
 header{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px;
@@ -51,45 +49,34 @@ header {
     color: white;
   }
   
-  header .logo h1 {
+  h1 {
     font-size: 36px;
   }
   
-  .search-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  form {
+  .login-box {
     display: flex;
     align-items: center;
   }
-  
-  input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    width: 250px;
+
+  .login-box input[type="text"],
+  .login-box input[type="password"] {
+    padding: 8px;
     margin-right: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    font-size: 14px;
   }
-  
-  button {
-    padding: 10px 15px;
-    background-color: #ff8c00;
+
+  .login-box input[type="submit"] {
+    padding: 8px 12px;
+    background-color: #ffcc00;
     color: white;
     border: none;
     border-radius: 4px;
-    font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    font-size: 14px;
   }
-  
-  button:hover {
-    background-color: #ff7a00;
-  }
-  
-  main {
-    padding: 20px;
+
+  .login-box input[type="submit"]:hover {
+    background-color: #ffcc00;
   }
